# vcmamrob

./: CMakeLists.txt  README.md  package.xml
doc/: relevant_links.docx
src/: main.py  sensors.py  worker.py
src/core/: loop.py
src/workers/: camera.py  position.py  sensors.py  worker.py
